trunk/Archive2/e2/36e8f365cfb3bf/output
main.cpp:8:10: error: expected '>'
    foo<a=b> f;
         ^
1 error generated.
